# Waste-Food-Donation-using-KNN-and-Dijikstra-

./: README.md  knn_model.pkl  label_encoder_Event Type.pkl  label_encoder_Storage Conditions.pkl  label_encoder_Type of Food.pkl  pyproject.toml  requirements.txt  scaler.pkl
KNN/: urls.py  views.py
authentication/: admin.py  models.py  serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_user_type.py  0003_alter_user_managers_remove_user_created_at_and_more.py  0004_delete_otpverification.py  0005_recipient_email.py  0006_alter_user_email.py  0007_alter_user_email.py  0008_remove_recipient_email.py
foodapp/: admin.py  models.py  serializer.py  urls.py  utils.py  views.py
foodproject/: settings.py  urls.py
location/: admin.py  models.py  urls.py  utils.py  views.py
nearestsearch/: apps.py  urls.py  views.py
notify/: urls.py  utils.py  views.py
static/: aboutus.css  choose-location.css  contactus.css  dashboard.css  donate.css  donation history.css  edit donation page.css  food donation.css  footer.css  forgetpassword.css  home.css  knn.css  login.css  navbar.css  profile.css  serving.css  signup.css
static/js/: dashboard.js  (+18 more)
templates/: aboutus.html  choose-location.html  contactus.html  dashboard.html  donate.html  donation history.html  edit donation page.html  editdonationpage.html  email.html  food donation.html  footer.html  forgetpassword.html  home.html  index.html  knn.html  login.html  navbar.html  profile.html  recipient_search_results.html  recipientlogin.html  serving.html  signup.html  usersignup.html
(+10 files in other folders)
